--- a/server/pages/index.html
+++ b/server/pages/index.html
@@ -8,113 +8,223 @@
   <meta name="description" content="Voice to Voice" />
   <meta name="keywords" content="Voice to Voice" />
   <meta name="author" content="Voice to Voice" />
-  <title>Voice to Voice Bot</title>
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <title>Echo Flow</title>
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
   <style>
     /* General Reset */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: "Poppins", Arial, sans-serif;
     }
 
-    /* Body styling */
+    /* Body Styling */
     body {
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      background-color: #f0f8f5;
-      color: #1d2d2a;
+      background: linear-gradient(135deg, #eef5c1, #fed6e3);
+      color: #333;
+      overflow: hidden;
     }
 
-    /* Container styling */
+    /* Background Animation */
+    body::before {
+      content: "";
+      position: absolute;
+      width: 300%;
+      height: 300%;
+      background: radial-gradient(circle,
+          rgba(255, 223, 141, 0.3),
+          rgba(255, 236, 179, 0));
+      animation: pulse 10s infinite alternate ease-in-out;
+      filter: blur(200px);
+      transform: translate(-50%, -50%);
+    }
+
+    @keyframes pulse {
+
+      0%,
+      100% {
+        transform: translate(-50%, -50%) scale(1.2);
+      }
+
+      50% {
+        transform: translate(-50%, -50%) scale(1.4);
+      }
+    }
+
+    /* Container Styling */
     .container {
-      background-color: #e1f0eb;
-      padding: 25px;
-      width: 380px;
+      background: rgba(255, 255, 255, 0.9);
+      backdrop-filter: blur(10px);
+      padding: 30px;
       text-align: center;
-      border: 1px solid #c3e6d9;
-      border-radius: 8px;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      border-radius: 20px;
+      box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
+      width: 90%;
+      max-width: 600px;
+      overflow-y: auto;
     }
 
     h1 {
       margin-bottom: 20px;
-      color: #0a4d3a;
+      color: #fc9d03;
       font-size: 1.8em;
-      font-weight: 600;
+      font-weight: 700;
     }
 
     textarea {
       width: 100%;
       height: 100px;
-      margin-bottom: 15px;
+      margin-bottom: 20px;
       padding: 12px;
-      background-color: #f3faf7;
-      color: #1d2d2a;
-      border: 1px solid #c3e6d9;
-      border-radius: 6px;
+      background: #fffde7;
+      color: #6d4c41;
+      border: 1px solid #ffecb3;
+      border-radius: 8px;
       resize: none;
       outline: none;
       font-size: 1em;
-      transition: background-color 0.3s ease;
+      transition: all 0.3s ease;
     }
 
     textarea:focus {
-      background-color: #eaf6f3;
+      border-color: #ffd54f;
+      background: #fff8e1;
     }
 
-    button {
-      background-color: #36a079;
-      color: #ffffff;
-      padding: 8px 18px;
-      margin: 8px 4px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 0.9em;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      gap: 6px;
+    /* Distinctive Result Box */
+    #gpt-result {
+      margin-top: 20px;
+      text-align: justify;
+      font-style: normal;
+      font-weight: 500;
+      color: #6d4c41;
+      min-height: 60px;
+      padding: 12px;
+      border-radius: 8px;
+      background: #fffde7;
+      border: 1px solid #ffe082;
+      font-size: 1em;
+      box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.1);
       transition: background-color 0.3s ease;
     }
 
+    #gpt-result:hover {
+      background: #fff8e1;
+    }
+
+    button {
+      background: linear-gradient(135deg, #ffca28, #fbc02d);
+      color: #333;
+      padding: 10px 20px;
+      margin: 10px 6px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 1em;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      transition: all 0.3s ease;
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
     button:hover {
-      background-color: #58b992;
+      background: linear-gradient(135deg, #fdd835, #f9a825);
+      transform: scale(1.05);
     }
 
-    #gpt-result {
-      margin-top: 15px;
-      text-align: justify;
-      font-style: italic;
-      color: #0a4d3a;
-      min-height: 40px;
-      padding: 10px;
-      border-radius: 4px;
-      background-color: #f3faf7;
-      border: 1px solid #c3e6d9;
-    }
-
-    /* Dialog styling */
+    /* Dialog Styling */
     dialog {
-      background-color: #e1f0eb;
-      color: #1d2d2a;
-      border: 1px solid #c3e6d9;
-      padding: 15px;
-      text-align: left;
+      position: fixed;
+      top: 15%;
+      left: 50%;
+      transform: translate(-50%, 0);
+      background: #fff8e1;
+      color: #333;
+      border: 1px solid #ffe082;
+      padding: 20px;
+      text-align: center;
       width: 300px;
-      border-radius: 6px;
+      border-radius: 12px;
+      backdrop-filter: blur(10px);
+      box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
+      animation: fadeInDialog 0.5s ease-out;
+    }
+
+    @keyframes fadeInDialog {
+      from {
+        opacity: 0;
+        transform: translate(-50%, -20%);
+      }
+
+      to {
+        opacity: 1;
+        transform: translate(-50%, 0);
+      }
+    }
+
+    dialog::backdrop {
+      background: rgba(0, 0, 0, 0.3);
+      animation: backdropFadeIn 0.5s ease-out;
+    }
+
+    @keyframes backdropFadeIn {
+      from {
+        opacity: 0;
+      }
+
+      to {
+        opacity: 1;
+      }
     }
 
     dialog button {
-      background-color: #f08080;
-      padding: 5px 10px;
-      border-radius: 4px;
+      background: #f44336;
+      padding: 8px 15px;
+      border-radius: 6px;
       color: #fff;
       border: none;
+      font-size: 0.9em;
+      transition: all 0.3s ease;
+      display: inline-block;
+      margin-top: 10px;
+    }
+
+    dialog button:hover {
+      background: #d32f2f;
+      transform: scale(1.05);
+    }
+
+    /* Responsive Adjustments */
+    @media (max-width: 768px) {
+      .container {
+        width: 95%;
+        padding: 20px;
+      }
+
+      dialog {
+        width: 85%;
+      }
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.5em;
+      }
+
+      button {
+        font-size: 0.9em;
+        padding: 8px 15px;
+      }
     }
   </style>
 
@@ -197,10 +307,18 @@
 
     function speak() {
       const audio = document.getElementById("audio");
-      if (audio.src) {
+      const speakBtn = document.getElementById("speak");
+
+      if (audio.paused && audio.src) {
         audio.play();
+        speakBtn.innerHTML = `<i class="fas fa-stop"></i> Stop`;
+
+        audio.onended = () => {
+          speakBtn.innerHTML = `<i class="fas fa-volume-up"></i> Speak`;
+        };
       } else {
-        console.log("Speak");
+        audio.pause();
+        speakBtn.innerHTML = `<i class="fas fa-volume-up"></i> Speak`;
       }
     }
   </script>
@@ -208,21 +326,30 @@
 
 <body>
   <div class="container">
-    <h1>Voice to Voice Bot</h1>
+    <h1>Echo Flow</h1>
     <label for="voice-input"></label>
     <textarea name="voice-input" id="voice-input" disabled></textarea><br />
-    <button onclick="edit()" id="edit"><i class="fas fa-edit"></i> Edit</button>
-    <button onclick="record()" id="record"><i class="fas fa-microphone"></i> Record</button>
-    <button type="button" onclick="send()" id="send"><i class="fas fa-paper-plane"></i> Send</button>
+    <button onclick="edit()" id="edit">
+      <i class="fas fa-edit"></i> Edit
+    </button>
+    <button onclick="record()" id="record">
+      <i class="fas fa-microphone"></i> Record
+    </button>
+    <button type="button" onclick="send()" id="send">
+      <i class="fas fa-paper-plane"></i> Send
+    </button>
     <p id="gpt-result">Result will be displayed here</p>
-    <button onclick="speak()"><i class="fas fa-volume-up"></i> Speak</button>
+    <button onclick="speak()" id="speak">
+      <i class="fas fa-volume-up"></i> Speak
+    </button>
     <audio id="audio"></audio>
     <dialog id="error-msg">
       <p></p>
-      <button onclick="document.getElementById('error-msg').close()">X</button>
+      <button onclick="document.getElementById('error-msg').close()">
+        X
+      </button>
     </dialog>
   </div>
 </body>
 
 </html>
-
