--- a/server/pages/index.html
+++ b/server/pages/index.html
@@ -9,6 +9,7 @@
   <meta name="keywords" content="Voice to Voice" />
   <meta name="author" content="Voice to Voice" />
   <title>Echo Flow</title>
+  <link rel="dns-prefetch" href="//cdnjs.cloudflare.com" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
