--- a/server/pages/error.html
+++ b/server/pages/error.html
@@ -1,44 +1,88 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" content="Voice to Voice" />
+    <meta name="keywords" content="Voice to Voice" />
+    <meta name="author" content="Voice to Voice" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+    <title>{{.Title}}</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        padding: 20px;
+        transition:
+          background-color 0.3s,
+          color 0.3s;
+      }
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="description" content="Voice to Voice" />
-  <meta name="keywords" content="Voice to Voice" />
-  <meta name="author" content="Voice to Voice" />
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
-  <title>{{.Title}}</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f9;
-      color: #333;
-      text-align: center;
-      padding: 20px;
-    }
+      .error-container {
+        margin-top: 50px;
+      }
 
-    .error-container {
-      margin-top: 50px;
-    }
+      .status-code {
+        font-size: 100px;
+        transition: color 0.3s;
+      }
 
-    .status-code {
-      font-size: 100px;
-      color: #e74c3c;
-    }
+      .message {
+        font-size: 20px;
+        transition: color 0.3s;
+      }
 
-    .message {
-      font-size: 20px;
-    }
-  </style>
-</head>
+      /* Light Mode Colors */
+      body.light-mode {
+        background-color: #f4f4f9;
+        color: #333;
+      }
 
-<body>
-  <div class="error-container">
-    <div class="status-code">{{.StatusCode}}</div>
-    <div class="message">{{.ErrorMessage}}</div>
-  </div>
-</body>
+      .light-mode .status-code {
+        color: #e74c3c;
+      }
 
+      /* Dark Mode Colors */
+      body.dark-mode {
+        background-color: #1c1c1c;
+        color: #f4f4f9;
+      }
+
+      .dark-mode .status-code {
+        color: #c0392b;
+      }
+    </style>
+
+    <script>
+      function applyTheme() {
+        const prefersDark = window.matchMedia(
+          "(prefers-color-scheme: dark)",
+        ).matches;
+        const darkModeEnabled =
+          localStorage.getItem("darkMode") === "true" ||
+          (!localStorage.getItem("darkMode") && prefersDark);
+
+        if (darkModeEnabled) {
+          document.body.classList.add("dark-mode");
+          document.body.classList.remove("light-mode");
+          localStorage.setItem("darkMode", "true");
+        } else {
+          document.body.classList.add("light-mode");
+          document.body.classList.remove("dark-mode");
+          localStorage.setItem("darkMode", "false");
+        }
+      }
+
+      // Run applyTheme on load
+      document.addEventListener("DOMContentLoaded", applyTheme);
+    </script>
+  </head>
+
+  <body>
+    <div class="error-container">
+      <div class="status-code">{{.StatusCode}}</div>
+      <div class="message">{{.ErrorMessage}}</div>
+    </div>
+  </body>
 </html>
