--- a/server/pages/error.html
+++ b/server/pages/error.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="Voice to Voice" />
     <meta name="keywords" content="Voice to Voice" />
     <meta name="author" content="Voice to Voice" />
@@ -33,7 +32,6 @@
         transition: color 0.3s;
       }
 
-      /* Light Mode Colors */
       body.light-mode {
         background-color: #f4f4f9;
         color: #333;
@@ -43,7 +41,6 @@
         color: #e74c3c;
       }
 
-      /* Dark Mode Colors */
       body.dark-mode {
         background-color: #1c1c1c;
         color: #f4f4f9;
@@ -56,25 +53,18 @@
 
     <script>
       function applyTheme() {
-        const prefersDark = window.matchMedia(
-          "(prefers-color-scheme: dark)",
-        ).matches;
-        const darkModeEnabled =
-          localStorage.getItem("darkMode") === "true" ||
-          (!localStorage.getItem("darkMode") && prefersDark);
-
-        if (darkModeEnabled) {
-          document.body.classList.add("dark-mode");
-          document.body.classList.remove("light-mode");
-          localStorage.setItem("darkMode", "true");
-        } else {
-          document.body.classList.add("light-mode");
-          document.body.classList.remove("dark-mode");
-          localStorage.setItem("darkMode", "false");
-        }
+        let e = window.matchMedia("(prefers-color-scheme: dark)").matches,
+          d =
+            "true" === localStorage.getItem("darkMode") ||
+            (!localStorage.getItem("darkMode") && e);
+        d
+          ? (document.body.classList.add("dark-mode"),
+            document.body.classList.remove("light-mode"),
+            localStorage.setItem("darkMode", "true"))
+          : (document.body.classList.add("light-mode"),
+            document.body.classList.remove("dark-mode"),
+            localStorage.setItem("darkMode", "false"));
       }
-
-      // Run applyTheme on load
       document.addEventListener("DOMContentLoaded", applyTheme);
     </script>
   </head>
