--- a/server/pages/about.html
+++ b/server/pages/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>About - Echo Flow</title>
+    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
