Made a prompt change
it's catchy

--- a/server/pages/index.html
+++ b/server/pages/index.html
@@ -518,7 +518,7 @@
         <textarea
           id="voice-input"
           disabled
-          placeholder="Enter your message..."
+          placeholder="Speak Your Mind..."
           aria-label="Voice Input"
         ></textarea>
         <div class="action-buttons">
