--- a/server/pages/about.html
+++ b/server/pages/about.html
@@ -248,6 +248,9 @@
         margin: 0 10px;
         font-size: 0.9em;
       }
+      section {
+        scroll-margin-top: 20px;
+      }
     </style>
   </head>
 
@@ -302,7 +305,7 @@
         </p>
       </section>
 
-      <section>
+      <section id="privacy-policy">
         <h2>Privacy Policy</h2>
         <p>
           At Echo Flow, we are deeply committed to protecting your privacy and
@@ -322,7 +325,7 @@
         </p>
       </section>
 
-      <section>
+      <section id="terms-of-service">
         <h2>Terms of Service</h2>
         <p>
           By using Echo Flow, you agree to comply with our terms of service,
@@ -343,7 +346,7 @@
         </p>
       </section>
 
-      <section>
+      <section id="contact-us">
         <h2>Contact Us</h2>
         <p>
           We value your feedback and are here to answer any questions or address
