--- a/server/pages/about.html
+++ b/server/pages/about.html
@@ -1,376 +1,321 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>About - Echo Flow</title>
-    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com" />
-    <link rel="preconnect" href="//cdnjs.cloudflare.com" />
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
-    <link rel="manifest" href="/assets/manifest.json" />
-    <link rel="apple-touch-icon" href="/assets/icons/apple-icon-180.png" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-    <link rel="preload" href="/assets/js/dark-mode.js" as="script" />
-    <style>
-      .sidebar,
-      .sidebar-overlay {
-        position: fixed;
-        top: 0;
-        height: 100%;
-      }
+{{define "title"}}About - Echo Flow{{end}} {{define "header"}}
+<link rel="preload" href="/assets/js/dark-mode.js" as="script" />
+<style>
+  .sidebar,
+  .sidebar-overlay {
+    position: fixed;
+    top: 0;
+    height: 100%;
+  }
 
-      h2,
-      p {
-        margin-bottom: 15px;
-      }
+  h2,
+  p {
+    margin-bottom: 15px;
+  }
 
-      .menu-items a,
-      .sidebar a,
-      footer a {
-        text-decoration: none;
-        transition: color 0.3s;
-      }
+  .menu-items a,
+  .sidebar a,
+  footer a {
+    text-decoration: none;
+    transition: color 0.3s;
+  }
 
-      .toggle-switch input:checked + .slider,
-      body.dark-mode footer {
-        background: #353238;
-      }
+  .toggle-switch input:checked + .slider,
+  body.dark-mode footer {
+    background: #353238;
+  }
 
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: Poppins, Arial, sans-serif;
-      }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Poppins, Arial, sans-serif;
+  }
 
-      body {
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-        background: linear-gradient(135deg, #ecba82, #f2a65a);
-        color: #353238;
-        transition:
-          background 0.3s,
-          color 0.3s;
-        overflow-x: hidden;
-      }
+  body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background: linear-gradient(135deg, #ecba82, #f2a65a);
+    color: #353238;
+    transition:
+      background 0.3s,
+      color 0.3s;
+    overflow-x: hidden;
+  }
 
-      body.dark-mode {
-        background: linear-gradient(135deg, #353238, #2e2a27);
-        color: #ecba82;
-      }
+  body.dark-mode {
+    background: linear-gradient(135deg, #353238, #2e2a27);
+    color: #ecba82;
+  }
 
-      .nav-content {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 15px 20px;
-      }
+  .nav-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 20px;
+  }
 
-      .logo {
-        font-size: 1.5em;
-        font-weight: 700;
-      }
+  .logo {
+    font-size: 1.5em;
+    font-weight: 700;
+  }
 
-      .logo a {
-        text-decoration: none;
-        color: inherit;
-      }
+  .logo a {
+    text-decoration: none;
+    color: inherit;
+  }
 
-      .menu-items {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-      }
+  .menu-items {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
 
-      .hamburger,
-      .toggle-switch input[type="checkbox"] {
-        display: none;
-      }
+  .hamburger,
+  .toggle-switch input[type="checkbox"] {
+    display: none;
+  }
 
-      .menu-items a {
-        color: inherit;
-        font-size: 1em;
-      }
+  .menu-items a {
+    color: inherit;
+    font-size: 1em;
+  }
 
-      .hamburger {
-        font-size: 1.5em;
-        background: 0 0;
-        border: none;
-        color: inherit;
-        cursor: pointer;
-        transition: transform 0.3s;
-      }
+  .hamburger {
+    font-size: 1.5em;
+    background: 0 0;
+    border: none;
+    color: inherit;
+    cursor: pointer;
+    transition: transform 0.3s;
+  }
 
-      .sidebar,
-      .sidebar a,
-      body.dark-mode a.email-link,
-      body.dark-mode footer,
-      body.dark-mode footer a {
-        color: #ecba82;
-      }
+  .sidebar,
+  .sidebar a,
+  body.dark-mode a.email-link,
+  body.dark-mode footer,
+  body.dark-mode footer a {
+    color: #ecba82;
+  }
 
-      .hamburger.open i::before {
-        content: "\f00d";
-      }
+  .hamburger.open i::before {
+    content: "\f00d";
+  }
 
-      .sidebar-overlay {
-        left: 0;
-        width: 100%;
-        background: rgba(0, 0, 0, 0.5);
-        display: none;
-        opacity: 0;
-        z-index: 998;
-        transition: opacity 0.3s;
-      }
+  .sidebar-overlay {
+    left: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: none;
+    opacity: 0;
+    z-index: 998;
+    transition: opacity 0.3s;
+  }
 
-      .sidebar-overlay.show {
-        display: block;
-        opacity: 1;
-      }
+  .sidebar-overlay.show {
+    display: block;
+    opacity: 1;
+  }
 
-      .sidebar {
-        right: -250px;
-        width: 250px;
-        background: rgba(0, 0, 0, 0.9);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 20px;
-        transition: right 0.3s;
-        z-index: 999;
-        padding: 20px;
-      }
+  .sidebar {
+    right: -250px;
+    width: 250px;
+    background: rgba(0, 0, 0, 0.9);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    transition: right 0.3s;
+    z-index: 999;
+    padding: 20px;
+  }
 
-      .sidebar.show {
-        right: 0;
-      }
+  .sidebar.show {
+    right: 0;
+  }
 
-      .sidebar a {
-        font-size: 1.2em;
-      }
+  .sidebar a {
+    font-size: 1.2em;
+  }
 
-      .sidebar .toggle-switch,
-      .toggle-switch {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        cursor: pointer;
-      }
+  .sidebar .toggle-switch,
+  .toggle-switch {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+  }
 
-      .toggle-switch .slider {
-        width: 40px;
-        height: 20px;
-        background: #ecba82;
-        border-radius: 20px;
-        position: relative;
-        transition: background 0.3s;
-      }
+  .toggle-switch .slider {
+    width: 40px;
+    height: 20px;
+    background: #ecba82;
+    border-radius: 20px;
+    position: relative;
+    transition: background 0.3s;
+  }
 
-      .toggle-switch .slider::before {
-        content: "";
-        position: absolute;
-        width: 18px;
-        height: 18px;
-        background: #353238;
-        border-radius: 50%;
-        top: 1px;
-        left: 2px;
-        transition: 0.4s;
-      }
+  .toggle-switch .slider::before {
+    content: "";
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    background: #353238;
+    border-radius: 50%;
+    top: 1px;
+    left: 2px;
+    transition: 0.4s;
+  }
 
-      .toggle-switch input:checked + .slider::before {
-        transform: translateX(20px);
-        background: #ecba82;
-      }
+  .toggle-switch input:checked + .slider::before {
+    transform: translateX(20px);
+    background: #ecba82;
+  }
 
-      @media (max-width: 768px) {
-        .menu-items {
-          display: none;
-        }
+  @media (max-width: 768px) {
+    .menu-items {
+      display: none;
+    }
 
-        .hamburger {
-          display: block;
-        }
+    .hamburger {
+      display: block;
+    }
 
-        .container {
-          padding: 20px;
-        }
-      }
+    .container {
+      padding: 20px;
+    }
+  }
 
-      .container {
-        max-width: 800px;
-        margin: 20px auto;
-        padding: 30px;
-        background: rgba(255, 255, 255, 0.9);
-        backdrop-filter: blur(10px);
-        border-radius: 20px;
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-      }
+  .container {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 30px;
+    background: rgba(255, 255, 255, 0.9);
+    backdrop-filter: blur(10px);
+    border-radius: 20px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+  }
 
-      a.email-link {
-        color: #353238;
-        text-decoration: underline;
-      }
+  a.email-link {
+    color: #353238;
+    text-decoration: underline;
+  }
 
-      body.dark-mode .container {
-        background: #4e4540;
-        color: #ecba82;
-      }
+  body.dark-mode .container {
+    background: #4e4540;
+    color: #ecba82;
+  }
 
-      h2 {
-        font-size: 1.8em;
-        color: #f2a65a;
-      }
+  h2 {
+    font-size: 1.8em;
+    color: #f2a65a;
+  }
 
-      p {
-        line-height: 1.6;
-        text-align: justify;
-      }
+  p {
+    line-height: 1.6;
+    text-align: justify;
+  }
 
-      footer {
-        text-align: center;
-        padding: 15px 20px;
-        background: #ecba82;
-        color: #353238;
-        width: 100%;
-        margin-top: auto;
-      }
+  footer {
+    text-align: center;
+    padding: 15px 20px;
+    background: #ecba82;
+    color: #353238;
+    width: 100%;
+    margin-top: auto;
+  }
 
-      footer a {
-        color: #353238;
-        margin: 0 10px;
-        font-size: 0.9em;
-      }
-      section {
-        scroll-margin-top: 20px;
-      }
-    </style>
-  </head>
+  footer a {
+    color: #353238;
+    margin: 0 10px;
+    font-size: 0.9em;
+  }
 
-  <body>
-    <!-- Navbar -->
-    <nav>
-      <div class="nav-content">
-        <div class="logo"><a href="/">Echo Flow</a></div>
-        <div class="menu-items">
-          <a href="/">Home</a>
-          <a href="/about">About</a>
-          <label class="toggle-switch">
-            <input type="checkbox" onchange="toggleDarkMode()" />
-            <span class="slider"></span>
-          </label>
-        </div>
-        <button class="hamburger" onclick="toggleSidebar()">
-          <i class="fas fa-bars"></i>
-        </button>
-      </div>
-    </nav>
+  section {
+    scroll-margin-top: 20px;
+  }
+</style>
+{{end}} {{define "content"}} {{template "navbar" .}}
+<!-- Main Content Container -->
+<div class="container">
+  <section>
+    <h2>About Us</h2>
+    <p>
+      Echo Flow is an innovative platform designed to make communication easier
+      through seamless voice-to-voice interactions. Our mission is to enable
+      users to communicate naturally, without the need for complicated tools or
+      interfaces. By leveraging cutting-edge speech processing technology and
+      advanced artificial intelligence, Echo Flow accurately captures and
+      responds to user input, ensuring an immersive and intuitive experience
+      across various scenarios. Whether you're looking to enhance productivity,
+      improve accessibility, or simply enjoy a more natural way to interact with
+      technology, Echo Flow is dedicated to breaking down barriers and
+      connecting people through the power of voice. We believe that
+      communication should be effortless and that technology should adapt to
+      you—not the other way around.
+    </p>
+  </section>
 
-    <!-- Sidebar Menu with Overlay -->
-    <div class="sidebar-overlay" onclick="closeSidebar()"></div>
-    <div class="sidebar">
-      <a href="/">Home</a>
-      <a href="/about">About</a>
-      <label class="toggle-switch">
-        <input type="checkbox" onchange="toggleDarkMode()" />
-        <span class="slider"></span>
-      </label>
-    </div>
+  <section id="privacy-policy">
+    <h2>Privacy Policy</h2>
+    <p>
+      At Echo Flow, we are deeply committed to protecting your privacy and
+      ensuring the security of your personal information. We understand the
+      importance of keeping your data confidential, and we take this
+      responsibility very seriously. Importantly, we do not store any of your
+      data on our servers. All voice inputs and interactions are directly sent
+      to our custom GPT model for processing in real-time, without being
+      recorded or stored. This means that your conversations remain entirely
+      confidential and ephemeral. We utilize robust data encryption protocols
+      during transmission to safeguard your information from unauthorized
+      access. Our infrastructure is designed with privacy in mind, ensuring that
+      your voice data is processed securely and then immediately discarded. We
+      are dedicated to providing you with a secure platform where you can
+      communicate freely, knowing that your privacy is fully protected and that
+      your data is never stored or shared.
+    </p>
+  </section>
 
-    <!-- Main Content Container -->
+  <section id="terms-of-service">
+    <h2>Terms of Service</h2>
+    <p>
+      By using Echo Flow, you agree to comply with our terms of service, which
+      are designed to ensure a safe and respectful environment for all users.
+      You agree to use the platform responsibly and in accordance with all
+      applicable laws and regulations. Echo Flow grants you a non-exclusive,
+      limited license to use our services for personal, non-commercial purposes.
+      You agree not to misuse our services or assist anyone else in doing so.
+      This includes refraining from any activities that could harm our platform,
+      interfere with other users, or violate any laws. Unauthorized use,
+      modification, distribution, or reverse engineering of our software is
+      strictly prohibited. We reserve the right to suspend or terminate your
+      access to Echo Flow if you violate these terms or engage in any activity
+      that compromises the integrity or security of our services. We encourage
+      you to read the full Terms of Service to understand your rights and
+      obligations when using Echo Flow.
+    </p>
+  </section>
 
-    <div class="container">
-      <section>
-        <h2>About Us</h2>
-        <p>
-          Echo Flow is an innovative platform designed to make communication
-          easier through seamless voice-to-voice interactions. Our mission is to
-          enable users to communicate naturally, without the need for
-          complicated tools or interfaces. By leveraging cutting-edge speech
-          processing technology and advanced artificial intelligence, Echo Flow
-          accurately captures and responds to user input, ensuring an immersive
-          and intuitive experience across various scenarios. Whether you're
-          looking to enhance productivity, improve accessibility, or simply
-          enjoy a more natural way to interact with technology, Echo Flow is
-          dedicated to breaking down barriers and connecting people through the
-          power of voice. We believe that communication should be effortless and
-          that technology should adapt to you—not the other way around.
-        </p>
-      </section>
-
-      <section id="privacy-policy">
-        <h2>Privacy Policy</h2>
-        <p>
-          At Echo Flow, we are deeply committed to protecting your privacy and
-          ensuring the security of your personal information. We understand the
-          importance of keeping your data confidential, and we take this
-          responsibility very seriously. Importantly, we do not store any of
-          your data on our servers. All voice inputs and interactions are
-          directly sent to our custom GPT model for processing in real-time,
-          without being recorded or stored. This means that your conversations
-          remain entirely confidential and ephemeral. We utilize robust data
-          encryption protocols during transmission to safeguard your information
-          from unauthorized access. Our infrastructure is designed with privacy
-          in mind, ensuring that your voice data is processed securely and then
-          immediately discarded. We are dedicated to providing you with a secure
-          platform where you can communicate freely, knowing that your privacy
-          is fully protected and that your data is never stored or shared.
-        </p>
-      </section>
-
-      <section id="terms-of-service">
-        <h2>Terms of Service</h2>
-        <p>
-          By using Echo Flow, you agree to comply with our terms of service,
-          which are designed to ensure a safe and respectful environment for all
-          users. You agree to use the platform responsibly and in accordance
-          with all applicable laws and regulations. Echo Flow grants you a
-          non-exclusive, limited license to use our services for personal,
-          non-commercial purposes. You agree not to misuse our services or
-          assist anyone else in doing so. This includes refraining from any
-          activities that could harm our platform, interfere with other users,
-          or violate any laws. Unauthorized use, modification, distribution, or
-          reverse engineering of our software is strictly prohibited. We reserve
-          the right to suspend or terminate your access to Echo Flow if you
-          violate these terms or engage in any activity that compromises the
-          integrity or security of our services. We encourage you to read the
-          full Terms of Service to understand your rights and obligations when
-          using Echo Flow.
-        </p>
-      </section>
-
-      <section id="contact-us">
-        <h2>Contact Us</h2>
-        <p>
-          We value your feedback and are here to answer any questions or address
-          any concerns you may have. Your insights and suggestions are
-          invaluable to us as they help us improve our services and provide you
-          with the best possible experience. For inquiries, support, or
-          feedback, please do not hesitate to reach out to us at
-          <a class="email-link" href="mailto:yasasvigumma@gmail.com"
-            >yasasvigumma@gmail.com</a
-          >. Our dedicated support team is committed to responding to your
-          queries promptly and thoroughly. Whether you have technical questions,
-          need assistance, or want to share your thoughts on how we can enhance
-          Echo Flow, we are here to listen and assist. Your satisfaction is our
-          top priority, and we are always eager to hear from you.
-        </p>
-      </section>
-    </div>
-
-    <!-- Footer -->
-    <footer>
-      <a href="#privacy-policy">Privacy Policy</a> |
-      <a href="#terms-of-service">Terms of Service</a> |
-      <a href="#contact-us">Contact Us</a>
-    </footer>
-  </body>
-  <script src="/assets/js/dark-mode.js"></script>
-</html>
+  <section id="contact-us">
+    <h2>Contact Us</h2>
+    <p>
+      We value your feedback and are here to answer any questions or address any
+      concerns you may have. Your insights and suggestions are invaluable to us
+      as they help us improve our services and provide you with the best
+      possible experience. For inquiries, support, or feedback, please do not
+      hesitate to reach out to us at
+      <a class="email-link" href="mailto:yasasvigumma@gmail.com"
+        >yasasvigumma@gmail.com</a
+      >. Our dedicated support team is committed to responding to your queries
+      promptly and thoroughly. Whether you have technical questions, need
+      assistance, or want to share your thoughts on how we can enhance Echo
+      Flow, we are here to listen and assist. Your satisfaction is our top
+      priority, and we are always eager to hear from you.
+    </p>
+  </section>
+</div>
+{{template "footer" .}}
+<script src="/assets/js/dark-mode.js"></script>
+{{end}}
