--- a/server/pages/error.html
+++ b/server/pages/error.html
@@ -1,116 +1,97 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Voice to Voice" />
-    <meta name="keywords" content="Voice to Voice" />
-    <meta name="author" content="Voice to Voice" />
-    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com" />
-    <link rel="preconnect" href="//cdnjs.cloudflare.com" />
-    <link
-      rel="preload"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      as="style"
-    />
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
-    <title>{{.Title}}</title>
-    <style>
-      @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css);
+{{define "title"}} {{.Title}} {{end}} {{define "header"}}
+<style>
+  @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css);
 
-      body {
-        font-family: Poppins, Arial, sans-serif;
-        padding: 20px;
-        display: flex;
-        min-height: 93vh;
-        justify-content: center;
-        align-items: center;
-        transition:
-          background 0.3s,
-          color 0.3s;
-      }
+  body {
+    font-family: Poppins, Arial, sans-serif;
+    padding: 20px;
+    display: flex;
+    min-height: 93vh;
+    justify-content: center;
+    align-items: center;
+    transition:
+      background 0.3s,
+      color 0.3s;
+  }
 
-      .error-container {
-        margin-top: 10px;
-      }
+  .error-container {
+    margin-top: 10px;
+  }
 
-      a {
-        text-decoration: none;
-        padding: 10px;
-        border-radius: 5px;
-        transition: color 0.3s;
-      }
+  a {
+    text-decoration: none;
+    padding: 10px;
+    border-radius: 5px;
+    transition: color 0.3s;
+  }
 
-      body.light-mode {
-        background: linear-gradient(135deg, #ecba82, #f2a65a);
-        color: #353238;
-      }
+  body.light-mode {
+    background: linear-gradient(135deg, #ecba82, #f2a65a);
+    color: #353238;
+  }
 
-      .light-mode .status-code {
-        font-size: 100px;
-        color: #c21706;
-      }
+  .light-mode .status-code {
+    font-size: 100px;
+    color: #c21706;
+  }
 
-      .light-mode .message {
-        font-size: 20px;
-        color: #353238;
-      }
+  .light-mode .message {
+    font-size: 20px;
+    color: #353238;
+  }
 
-      .light-mode a {
-        color: #ecba82;
-        background-color: #2e2a27;
-      }
+  .light-mode a {
+    color: #ecba82;
+    background-color: #2e2a27;
+  }
 
-      body.dark-mode {
-        background: linear-gradient(135deg, #353238, #2e2a27);
-        color: #ecba82;
-      }
+  body.dark-mode {
+    background: linear-gradient(135deg, #353238, #2e2a27);
+    color: #ecba82;
+  }
 
-      .dark-mode .status-code {
-        font-size: 100px;
-        color: #c0392b;
-      }
+  .dark-mode .status-code {
+    font-size: 100px;
+    color: #c0392b;
+  }
 
-      .dark-mode .message {
-        font-size: 20px;
-        color: #ecba82;
-      }
+  .dark-mode .message {
+    font-size: 20px;
+    color: #ecba82;
+  }
 
-      .dark-mode a {
-        color: #353238;
-        background-color: #f2a65a;
-      }
-    </style>
+  .dark-mode a {
+    color: #353238;
+    background-color: #f2a65a;
+  }
+</style>
 
-    <script>
-      function applyTheme() {
-        let e = window.matchMedia("(prefers-color-scheme: dark)").matches;
-        "true" === localStorage.getItem("darkMode") ||
-        (!localStorage.getItem("darkMode") && e)
-          ? (document.body.classList.add("dark-mode"),
-            document.body.classList.remove("light-mode"),
-            localStorage.setItem("darkMode", "true"))
-          : (document.body.classList.add("light-mode"),
-            document.body.classList.remove("dark-mode"),
-            localStorage.setItem("darkMode", "false"));
-      }
-      (window.onload = function () {
-        "/error" !== window.location.pathname &&
-          window.history.replaceState(null, "", "/error");
-      }),
-        document.addEventListener("DOMContentLoaded", applyTheme);
-    </script>
-  </head>
-
-  <body>
-    <div class="error-container">
-      <center>
-        <div class="status-code">{{.StatusCode}}</div>
-        <br />
-        <div class="message">{{.ErrorMessage}}</div>
-        <br />
-        <a href="/">Go back to Home</a>
-      </center>
-    </div>
-  </body>
-</html>
+<script>
+  function applyTheme() {
+    let e = window.matchMedia("(prefers-color-scheme: dark)").matches;
+    "true" === localStorage.getItem("darkMode") ||
+    (!localStorage.getItem("darkMode") && e)
+      ? (document.body.classList.add("dark-mode"),
+        document.body.classList.remove("light-mode"),
+        localStorage.setItem("darkMode", "true"))
+      : (document.body.classList.add("light-mode"),
+        document.body.classList.remove("dark-mode"),
+        localStorage.setItem("darkMode", "false"));
+  }
+  (window.onload = function () {
+    "/error" !== window.location.pathname &&
+      window.history.replaceState(null, "", "/error");
+  }),
+    document.addEventListener("DOMContentLoaded", applyTheme);
+</script>
+{{end}} {{define "content"}}
+<div class="error-container">
+  <center>
+    <div class="status-code">{{.StatusCode}}</div>
+    <br />
+    <div class="message">{{.ErrorMessage}}</div>
+    <br />
+    <a href="/">Go back to Home</a>
+  </center>
+</div>
+{{end}}
