--- a/server/pages/about.html
+++ b/server/pages/about.html
@@ -306,8 +306,8 @@
       as they help us improve our services and provide you with the best
       possible experience. For inquiries, support, or feedback, please do not
       hesitate to reach out to us at
-      <a class="email-link" href="mailto:yasasvigumma@gmail.com"
-        >yasasvigumma@gmail.com</a
+      <a class="email-link" href="mailto:contact@yasasvi.site"
+        >contact@yasasvi.site</a
       >. Our dedicated support team is committed to responding to your queries
       promptly and thoroughly. Whether you have technical questions, need
       assistance, or want to share your thoughts on how we can enhance Echo
